--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -240,4 +240,13 @@
         }
 
     }
+
+    .h-banner {
+        .h-mobile-banner {
+            display: block;
+        }
+        .h-pc-banner {
+            display: none;
+        }
+    }
 }
