--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1382,11 +1382,33 @@ main[role="main"] {
     margin: 100px auto 150px;
     position: relative;
     overflow: hidden;
-    
+
     .views-element-container {
       width: 75%;
       float: left;
-      padding-bottom: 10px;
+      overflow: hidden;
+      .view-content {
+        padding-right: 5%;
+        border-right: 1px solid #d3d3d3;
+        margin-bottom: -50%;
+        padding-bottom: 50%;
+        padding-left: 5px;
+      }
+      .views-row {
+        margin-top: 60px;
+        position: relative;
+        padding: 20px;
+      }
+      .views-field-field-image {
+        width: 28%;
+        float: left;
+        margin-right: 4%;
+        
+        & img {
+          width: 100%;
+          height: auto;
+        }
+      }
     }
     .article-taxonomy {
       width: 25%;
