--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1386,27 +1386,29 @@ main[role="main"] {
   }
   .h-main-region {
     width: 84%;
-    margin: 100px auto 150px;
+    margin: 0 auto;
     position: relative;
   }
 
   .high-main {
     padding-top: 0;
-    width: 84%;
-    margin: 100px auto 150px;
+    width: 75%;
     position: relative;
+    float: left;
+
     .views-element-container {
-      
+      margin-bottom: 150px;
       .view-content {
         padding-right: 5%;
         border-right: 1px solid #d3d3d3;
-        // margin-bottom: -50%;
-        padding-bottom: 50%;
+        // padding-bottom: 50%;
         padding-left: 5px;
       }
       .views-row {
         margin-top: 60px;
         position: relative;
+        display: flex;
+        align-items: center;
         padding: 20px;
         line-height: 1.5;
 
@@ -1497,12 +1499,61 @@ main[role="main"] {
           float: left;
         }
       }
+      .pager {
+        position: relative;
+        text-align: center;
+        margin-top: 30px;
+
+        li {
+          display: inline-block;
+          margin-left: 5px;
+          margin-right: 5px;
+        }
+        a {
+          color: #5c5b5b;
+          text-decoration: none;
+        }
+        .is-active a{
+          color: #d71f3c;
+        }
+      }
+    }  
+  }
+  .h-article-type {
+    width: 25%;
+    float: right;
+
+    .article-type-header {
+      color: #4b4b4b;
+      position: relative;
+      margin-left: 25%;
+      font-size: 16px;
+      font-size: 1rem;
+
+      &::before {
+        content: '';
+        width: 17px;
+        height: 19px;
+        background-image: url('../images/icon4.png');
+        background-repeat: no-repeat;
+        background-size: 100%;
+        display: block;
+        position: absolute;
+        top: 1px;
+        left: -30px;
+      }
     }
     .article-taxonomy {
-      width: 25%;
-      float: right;
+      margin-left: 25%;
     }
-    
-  }
+    .views-row {
+      line-height: 56px;
+      border-bottom: 1px dashed #d3d3d3;
 
+      a {
+        color: #3e4346;
+        font-weight: bold;
+      }
+    }
+  }
 }
