--- a/sass/style.scss
+++ b/sass/style.scss
@@ -227,7 +227,6 @@
 }
 
 .white-desktop {
-
   background-color: rgba(255,255,255,.8);
   border-bottom: 1px solid #eee;
   box-shadow: 0 2px 10px -1px #ddd;
@@ -246,6 +245,10 @@
   & > div[role=navigation] ul li a {
     color: #5b5b5b;
   }
+}
+
+.none-opacity {
+  background-color: rgb(255,255,255);
 }
 
 
@@ -1365,6 +1368,7 @@ main[role="main"] {
 }
 
 .h-banner {
+  position: relative;
   
   .h-pc-banner img, .h-mobile-banner img{
     width: 100%;
@@ -1374,10 +1378,71 @@ main[role="main"] {
   .h-mobile-banner {
     display: none;
   }
+  .scroll-down-button{
+    cursor: pointer;
+    position: absolute;
+    bottom: -40px;
+    left: 50%;
+    margin-left: -45px;
+    z-index: 10;
+
+    &::before {
+      content: '';
+      width: 0;
+      height: 0;
+      border-style: solid;
+      border-width: 25px 45px 0 45px;
+      border-color: #db102c transparent transparent transparent;
+    }
+  }
+  .breadcrumb-container {
+    width: 84%;
+    margin: 0 auto;
+    margin-top: 120px;
+
+    .breadcrumb {
+      position: relative;
+      // top: 122px;
+      padding: 0 0 0 25px;
+      display: inline-block;
+      z-index: 99;
+      font-size: 14px;
+      font-size: .875rem;
+
+      &::before {
+        content: '';
+        width: 20px;
+        height: 16px;
+        background-image: url("../images/icon5.png");
+        background-repeat: no-repeat;
+        background-size: 100%;
+        display: block;
+        position: absolute;
+        left: -10px;
+      }
+
+      li {
+        display: inline-block;
+        &:nth-child(n+2)::before {
+          content: '>';
+          display: inline-block;
+          vertical-align: middle;
+          padding: 0 4px;
+          color: #5c5b5b;
+        }
+        &:last-child::before {
+          color: #4d4c4c;
+        }
+      }
+      a {
+        color: #5c5b5b;
+      }
+    }
+  }
 }
 .h-container {
   margin-bottom: 240px;
-  
+
   &::after {
     visibility: hidden;
     display: block;
@@ -1559,3 +1624,4 @@ main[role="main"] {
     }
   }
 }
+
