--- a/templates/breadcrumb.html.twig
+++ b/templates/breadcrumb.html.twig
@@ -8,18 +8,24 @@
  */
 #}
 {% if breadcrumb %}
-  <nav class="breadcrumb" role="navigation" aria-labelledby="system-breadcrumb">
-    <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
-    <ol>
-    {% for item in breadcrumb %}
-      <li>
-        {% if item.url %}
-          <a href="{{ item.url }}">{{ item.text }}</a>
-        {% else %}
-          {{ item.text }}
+  <div class="breadcrumb-container">
+    <nav class="breadcrumb" role="navigation" aria-labelledby="system-breadcrumb">
+      <h2 id="system-breadcrumb" class="visually-hidden">{{ 'Breadcrumb'|t }}</h2>
+      <ol>
+      {% for item in breadcrumb %}
+        {% if item.text != 'Home' %}
+          <li>
+            {% if item.url %}
+              <a href="{{ item.url }}">
+                {{ item.text }}
+              </a>
+            {% else %}
+              {{ item.text }}
+            {% endif %}
+          </li>
         {% endif %}
-      </li>
-    {% endfor %}
-    </ol>
-  </nav>
+      {% endfor %}
+      </ol>
+    </nav>
+  </div>
 {% endif %}
