--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -305,6 +305,7 @@
                         width: 100%;
                         float: none;
                         padding: 10px;
+                        box-sizing: border-box;
 
                         .field-type, .field-link{
                             display: none;
