--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1681,6 +1681,47 @@ main[role="main"] {
       }
     }
   }
+  .article-title {
+    font-size: 32px;
+    font-size: 2rem;
+    color: #4d4c4c;
+    margin: 0;
+    line-height: 1.5;
+    padding: 15px 0;
+    margin-top: 30px;
+    color: #1a1c1c;
+    font-weight: bold;
+  }
+  .article-author {
+    display: flex;
+    align-items: center;
+
+    & > div {
+      display: inline-block;
+    }
+
+    .author-img {
+      width: 70px;
+      height: 70px;
+      border-radius: 35px;
+      overflow: hidden;
+      margin-right: 20px;
+      
+      img {
+        width: 100%;
+        height: 100%;
+      }
+    }
+
+    .author-name {
+      font-weight: bold;
+      margin-right: 30px;
+
+      a {
+        color: #1a1c1c;
+      }
+    }
+  }
 }
 
 
