--- a/templates/page--node--%.html.twig
+++ b/templates/page--node--%.html.twig
@@ -44,7 +44,7 @@
 #}
 <div class="layout-container">
 
-  <header role="header" class="header white-desktop">
+  <header role="header" class="header white-desktop none-opacity">
     {{ page.header }}
   </header>
   <main role="main">
