--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -22,6 +22,11 @@
     }
    
 }
+@media (max-width: 1024px) and (min-width: 768px) {
+    .article-share-box {
+        margin-left: -55px;
+    }
+}
 @media (max-width: 1024px) and (min-width: 0) {
     html {
         font-size: 100%;
