--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1536,7 +1536,7 @@ main[role="main"] {
         margin-top: 12px;
         margin-bottom: 12px;
       }
-      .field-link a {
+      .field-link a:last-child {
         color: #3e4346;
         font-weight: bold;
         position: relative;
